# plonky2-ed25519

./: Cargo.toml  flake.nix
src/: main.rs
src/curve/: curve_adds.rs  curve_multiplication.rs  curve_types.rs  ed25519.rs  eddsa.rs
src/field/: ed25519_base.rs  ed25519_scalar.rs  field_testing.rs
src/gadgets/: curve.rs  curve_fixed_base.rs  curve_windowed_mul.rs  curve_windowed_mul_mt.rs  eddsa.rs  mod.rs  nonnative.rs  split_nonnative.rs
