[package]
name = "plonky2_ed25519"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = "0.2.2"
plonky2_util = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
plonky2_u32 = { git = "https://github.com/cfcosta/plonky2-u32" }
plonky2_ecdsa = { git = "https://github.com/cfcosta/plonky2-ecdsa" }
curve25519-dalek = { git = "https://github.com/polymerdao/curve25519-dalek", rev = "ed02bb5a", features = [
  "default",
] }
itertools = { version = "0.10.0", default-features = false, features = [
  "use_alloc",
] }
num = { version = "0.4", default-features = false, features = [
  "alloc",
  "rand",
] }
rayon = "1.5.1"
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
] }
anyhow = "1.0.40"
env_logger = "0.10.0"
log = "0.4.14"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
unroll = "0.1.5"
keccak-hash = "0.10.0"
static_assertions = "1.1.0"
sha2 = "0.10"
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0
