[package]
name = "plonky2_ed25519"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
curve25519-dalek = { git = "https://github.com/polymerdao/curve25519-dalek", rev = "ed02bb5a", features = [
  "default",
] }
env_logger = "0.10.0"
itertools = { version = "0.10.0", default-features = false, features = [
  "use_alloc",
] }
log = "0.4.14"
num = { version = "0.4", default-features = false, features = [
  "alloc",
  "rand",
] }
plonky2 = "0.2.2"
plonky2_ecdsa = { git = "https://github.com/cfcosta/plonky2-ecdsa" }
plonky2_u32 = { git = "https://github.com/cfcosta/plonky2-u32" }
plonky2_util = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0

[dev-dependencies]
proptest = "1.5.0"
test-strategy = "0.4.0"
